--- a/index.html
+++ b/index.html
@@ -12,95 +12,42 @@
       referrerpolicy="no-referrer"
     />
     <!-- bootstrap -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
-    ></script>
+    />
     <!-- Estilos -->
     <link rel="stylesheet" href="estilos.css" />
     <title>Inicio</title>
   </head>
   <body>
-    <header>
-      <nav class="navbar">
-        <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="./pages/productos.html">Productos</a></li>
-          <li><a href="./pages/nosotros.html">Nosotros</a></li>
-          <li><a href="./pages/contacto.html">Contacto</a></li>
-          <li><a href="./pages/login.html">Login</a></li>
-        </ul>
-      </nav>
+    <header class="container-fluid">
+      <div class="row">
+        <div class="col-sm-12">header</div>
+      </div>
     </header>
 
-    <main>
-      <aside>
-        <h1>SOLUCIONES DIGITALES</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-          itaque dolor neque ratione dolores officia iste. Quam voluptates
-          ratione inventore non officia sunt natus, quasi, porro consectetur
-          vero vitae ab?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic officia
-          odit sit totam magnam quod fugiat quae officiis iure dolor ratione
-          facere voluptatem distinctio, non culpa ullam maxime nobis ducimus?
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-          Exercitationem est tempore assumenda explicabo adipisci ipsam, sed
-          officiis hic omnis amet laboriosam suscipit nesciunt voluptatum rerum
-          id quos, eius illo itaque.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
-          voluptatum veritatis illum expedita necessitatibus dignissimos fugiat
-          maiores officia eius corporis fuga quibusdam maxime ipsam, aperiam
-          neque natus optio labore est!
-        </p>
-      </aside>
-
-      <article>
-        <div class="buscar">
-          <i class="fa-solid fa-magnifying-glass"></i>
-          <input type="text" placeholder="Buscar..." />
-          <i class="fa-solid fa-gear confi"></i>
-        </div>
-        <h2>Encuentra</h2>
-
-        <section>
-          <div>
-            <img src="img/equipos.png" alt="" />
-            <h4>Equipos</h4>
-          </div>
-          <div>
-            <img src="img/sofware.png" alt="" />
-            <h4>Software</h4>
-          </div>
-          <div>
-            <img src="img/mantenimiento.png" alt="" />
-            <h4>Mantenimiento</h4>
-          </div>
-          <div>
-            <img src="img/asesorias.png" alt="" />
-            <h4>Asesorías</h4>
-          </div>
-        </section>
-        <div class="redes">
-          <i class="fa-brands fa-facebook"></i>
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-linkedin-in"></i>
-          <i class="fa-brands fa-whatsapp"></i>
-        </div>
-      </article>
+    <main class="container-fluidn">
+      <div class="row">
+        <aside class="col-sm-5 col-md-4">
+          aside
+        </aside>
+        <article class="col-sm-7 col-md-8">
+          article
+        </article>
+      </div>
     </main>
 
-    <footer>
-      <p>
-        <strong> Todos los derechos reservados por copyright </strong>
-      </p>
+    <footer class="container-fluid">
+      <div class="row">
+        <div class="col-sm-12">
+          <p class="text-center">
+            <strong> Todos los derechos reservados por copyright </strong>
+          </p>
+        </div>
+      </div>
     </footer>
 
     <!-- Bootstrap - js - Separate -->
