--- a/index.html
+++ b/index.html
@@ -23,27 +23,48 @@
     <title>Inicio</title>
   </head>
   <body>
-    <header class="container-fluid">
-      <div class="row">
-        <div class="col-sm-12">header</div>
+    <!-- Navbar Inicio -->
+    <nav class="navbar navbar-expand-sm navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><strong>Tekus</strong></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <!-- <span class="navbar-toggler-icon"></span> -->
+          <i class="fa-solid fa-bars" style="color: #000000;"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/login.html">Login</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </header>
+    </nav>
+    <!-- Navbar Fin -->
 
     <main class="container-fluidn">
       <div class="row">
-        <aside class="col-sm-5 col-md-4">
-          aside
-        </aside>
-        <article class="col-sm-7 col-md-8">
-          article
-        </article>
+        <aside class="col-sm-5 col-md-4">aside</aside>
+        <article class="col-sm-7 col-md-8">article</article>
       </div>
     </main>
 
-    <footer class="container-fluid">
+    <footer class="container-fluid h-auto d-inline-block">
       <div class="row">
-        <div class="col-sm-12">
-          <p class="text-center">
+        <div class="text-center col-sm-12">
+          <p>
             <strong> Todos los derechos reservados por copyright </strong>
           </p>
         </div>
