V5-Responsive design Index

--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
     <nav class="navbar navbar-expand-sm navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><strong>Tekus</strong></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapsibleNavbar"
+        >
           <!-- <span class="navbar-toggler-icon"></span> -->
-          <i class="fa-solid fa-bars" style="color: #000000;"></i>
+          <i class="fa-solid fa-bars" style="color: #000000"></i>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
@@ -54,10 +59,66 @@
     </nav>
     <!-- Navbar Fin -->
 
-    <main class="container-fluidn">
+    <main class="container-fluid">
       <div class="row">
-        <aside class="col-sm-5 col-md-4">aside</aside>
-        <article class="col-sm-7 col-md-8">article</article>
+        <aside class="col-sm-5 col-md-4">
+          <h1 class="text-center"><strong>SOLUCIONES DIGITALES</strong></h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+            itaque dolor neque ratione dolores officia iste. Quam voluptates
+            ratione inventore non officia sunt natus, quasi, porro consectetur
+            vero vitae ab?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic officia
+            odit sit totam magnam quod fugiat quae officiis iure dolor ratione
+            facere voluptatem distinctio, non culpa ullam maxime nobis ducimus?
+          </p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Exercitationem est tempore assumenda explicabo adipisci ipsam, sed
+            officiis hic omnis amet laboriosam suscipit nesciunt voluptatum
+            rerum id quos, eius illo itaque.
+          </p>
+        </aside>
+        <article class="container-fluid col-sm-7 col-md-8">          
+          <section class="container-fluid">
+            <div class="row">
+              <div class="buscar">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" placeholder="Buscar..." />
+                <i class="fa-solid fa-gear confi"></i>
+              </div>
+            </div>
+            <h2><strong>Encuentra</strong></h2>
+            <div class="row">
+              <div class="col-md-6 col-lg-3 text-center">
+                <img src="img/equipos.png" alt="" />
+                <h4 class="w-auto">Equipos</h4>
+              </div>
+              <div class="col-md-6 col-lg-3 text-center">
+                <img src="img/sofware.png" alt="" />
+                <h4>Software</h4>
+              </div>
+              <div class="col-md-6 col-lg-3 text-center">
+                <img src="img/mantenimiento.png" alt="" />
+                <h4>Mantenimiento</h4>
+              </div>
+              <div class="col-md-6 col-lg-3 text-center">
+                <img src="img/asesorias.png" alt="" />
+                <h4>Asesorías</h4>
+              </div>
+            </div>
+            <div class="row">
+              <div class="redes">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
+                <i class="fa-brands fa-whatsapp"></i>
+              </div>
+            </div>
+          </section>
+        </article>
       </div>
     </main>
 
