--- a/pages/productos.html
+++ b/pages/productos.html
@@ -58,95 +58,89 @@
       </div>
     </nav>
     <!-- Navbar Fin -->
-    <main>
-      <article class="product">
-        <section class="producto">
-          <h1>Productos</h1>
-          <section class="sec">
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 1</h5>
-            </div>
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 2</h5>
-            </div>
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 3</h5>
-            </div>
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 4</h5>
-            </div>
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 5</h5>
-            </div>
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 6</h5>
-            </div>
-          </section>
-          <section class="sec">
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 7</h5>
-            </div>
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 8</h5>
-            </div>
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 9</h5>
-            </div>
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 10</h5>
-            </div>
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 11</h5>
-            </div>
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 12</h5>
-            </div>
-          </section>
-          <section class="sec">
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 13</h5>
-            </div>
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 14</h5>
-            </div>
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 15</h5>
-            </div>
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 16</h5>
-            </div>
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 17</h5>
-            </div>
-            <div class="item">
-              <img src="../img/producto.jpg" alt="Producto" />
-              <h5>Producto - 18</h5>
-            </div>
-          </section>
-        </section>
-      </article>
-      <div class="redes">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-linkedin-in"></i>
-        <i class="fa-brands fa-whatsapp"></i>
+    <main class="producto container-fluid">
+      <h1 class="text-center"><strong>Productos</strong></h1>
+      <section class="row">
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 1</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 2</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 3</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 4</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 5</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 6</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 7</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 8</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 9</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 10</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 11</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 12</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 13</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 14</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 15</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 16</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 17</h5>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2 text-center">
+          <img src="../img/producto.jpg" alt="Producto" />
+          <h5>Producto - 18</h5>
+        </div>
+      </section>
+      <div class="row">
+        <div class="redes">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-linkedin-in"></i>
+          <i class="fa-brands fa-whatsapp"></i>
+        </div>
       </div>
     </main>
 
