--- a/pages/login.html
+++ b/pages/login.html
@@ -59,25 +59,24 @@
     </nav>
     <!-- Navbar Fin -->
 
-    <main>
-      <section class="login">
-        <h1>Iniciar Sesión</h1>
-        <form action="#" method="post">
-          <label for="username">Usuario:</label>
-          <input type="text" id="username" name="username" required />
-
-          <label for="password">Contraseña:</label>
-          <input type="password" id="password" name="password" required />
-
-          <button type="submit">Ingresar</button>
-        </form>
-      </section>
-
-      <div class="redes">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-linkedin-in"></i>
-        <i class="fa-brands fa-whatsapp"></i>
+    <main class="login container-fluid">
+      <div class="row">
+        <article class="titulo col-sm-12 col-md-6 col-lg-6 text-center">
+          <h1 class="align-middle">Iniciar Sesión</h1>
+        </article>
+        <article class="col-sm-12 col-md-6 col-lg-6 text-center">
+          <form class="border border-dark rounded">
+            <div class="mb-3">
+              <label for="username" class="form-label">Usuario</label>
+              <input type="text" class="" id="username" aria-describedby="username" name="username" required/>
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Contraseña</label>
+              <input type="password" class="" id="password" required />
+            </div>
+            <button type="submit" class="btn btn-primary">Ingresar</button>
+          </form>
+        </article>
       </div>
     </main>
 
