V8-Responsive design Login

--- a/pages/login.html
+++ b/pages/login.html
@@ -59,37 +59,62 @@
     </nav>
     <!-- Navbar Fin -->
 
-    <main class="login container-fluid">
-      <div class="row">
-        <article class="titulo col-sm-12 col-md-6 col-lg-6 text-center">
+    <div class="login container w-75 mt-3 mb-5 p-5">
+      <div class="row align-items-center text-center">
+        <div class="col-sm-12 col-md-6 col-lg-6">
           <h1 class="align-middle">Iniciar Sesión</h1>
-        </article>
-        <article class="col-sm-12 col-md-6 col-lg-6 text-center">
-          <form class="border border-dark rounded">
-            <div class="mb-3">
-              <label for="username" class="form-label">Usuario</label>
-              <input type="text" class="" id="username" aria-describedby="username" name="username" required/>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <form action="#" class="p-5 rounded">
+            <div class="mb-4">
+              <label for="username" class="form-label">Usuario:</label>
+              <input type="text" class="form-control" id="username" name="username" required/>
             </div>
-            <div class="mb-3">
-              <label for="password" class="form-label">Contraseña</label>
-              <input type="password" class="" id="password" required />
+            <div class="mb-4">
+              <label for="password" class="form-label">Contraseña:</label>
+              <input type="password" class="form-control" id="password" name="password" required>
             </div>
-            <button type="submit" class="btn btn-primary">Ingresar</button>
+            <div class="d-grid">
+              <button type="submit" class="">Ingresar</button>
+            </div>
           </form>
-        </article>
+        </div>
       </div>
-    </main>
+    </div>
 
-    <footer class="container-fluid h-auto d-inline-block">
-      <div class="row">
-        <div class="text-center col-sm-12">
+    <footer class="container-fluid h-auto">
+      <div class="row align-items-center mt-3">
+        <div class="txt col-md-6 col-lg-6 ps-4">
           <p>
             <strong> Todos los derechos reservados por copyright </strong>
           </p>
         </div>
+        <div class="redes align-self-center col-sm-12 col-md-6 col-lg-6">
+          <ul class="">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
+            <i class="fa-brands fa-whatsapp"></i>
+          </ul>
+        </div>
       </div>
     </footer>
 
+    <!-- 
+    <footer class="container ">
+      <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-bottom">
+        <div class="col-md-4 d-flex align-items-center">
+          <span class="text-muted">&copy; 2023, Todos los derechos reservados.</span>
+        </div> 
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex"></ul>
+          <i class="ms-3 text-muted bi fa-brands fa-facebook"></i>
+          <i class="ms-3 text-muted bi fa-brands fa-twitter"></i>
+          <i class="ms-3 text-muted bi fa-brands fa-linkedin-in"></i>
+          <i class="ms-3 text-muted bi fa-brands fa-whatsapp"></i>
+        </ul>      
+      </div>
+    </footer>
+ -->
     <!-- Bootstrap - js - Separate -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
