--- a/index.html
+++ b/index.html
@@ -108,26 +108,26 @@
                 <img src="img/asesorias.png" alt="" />
                 <h4>Asesorías</h4>
               </div>
-            </div>
-            <div class="row">
-              <div class="redes">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-linkedin-in"></i>
-                <i class="fa-brands fa-whatsapp"></i>
-              </div>
-            </div>
+            </div>            
           </section>
         </article>
       </div>
     </main>
 
-    <footer class="container-fluid h-auto d-inline-block">
-      <div class="row">
-        <div class="text-center col-sm-12">
-          <p>
-            <strong> Todos los derechos reservados por copyright </strong>
+    <footer class="container-fluid h-auto">
+      <div class="row align-items-center mt-3">
+        <div class="txt col-md-6 col-lg-6 ps-4">
+          <p class="">
+            <span class="text-muted">&copy; 2023, Todos los derechos reservados.</span>
           </p>
+        </div>
+        <div class="redes align-self-center col-sm-12 col-md-6 col-lg-6 pe-4">
+          <ul class="">
+            <i class="fa-brands fa-facebook p-2"></i>
+            <i class="fa-brands fa-twitter p-2"></i>
+            <i class="fa-brands fa-linkedin-in p-2"></i>
+            <i class="fa-brands fa-whatsapp p-2"></i>
+          </ul>
         </div>
       </div>
     </footer>
