--- a/pages/login.html
+++ b/pages/login.html
@@ -61,10 +61,10 @@
 
     <div class="login container w-75 mt-3 mb-5 p-5">
       <div class="row align-items-center text-center">
-        <div class="col-sm-12 col-md-6 col-lg-6">
+        <div class="col-sm-12 col-md-12 col-lg-6">
           <h1 class="align-middle">Iniciar Sesión</h1>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-6">
+        <div class="col-sm-12 col-md-12 col-lg-6">
           <form action="#" class="p-5 rounded">
             <div class="mb-4">
               <label for="username" class="form-label">Usuario:</label>
@@ -85,36 +85,21 @@
     <footer class="container-fluid h-auto">
       <div class="row align-items-center mt-3">
         <div class="txt col-md-6 col-lg-6 ps-4">
-          <p>
-            <strong> Todos los derechos reservados por copyright </strong>
+          <p class="">
+            <span class="text-muted">&copy; 2023, Todos los derechos reservados.</span>
           </p>
         </div>
-        <div class="redes align-self-center col-sm-12 col-md-6 col-lg-6">
+        <div class="redes align-self-center col-sm-12 col-md-6 col-lg-6 pe-4">
           <ul class="">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-linkedin-in"></i>
-            <i class="fa-brands fa-whatsapp"></i>
+            <i class="fa-brands fa-facebook p-2"></i>
+            <i class="fa-brands fa-twitter p-2"></i>
+            <i class="fa-brands fa-linkedin-in p-2"></i>
+            <i class="fa-brands fa-whatsapp p-2"></i>
           </ul>
         </div>
       </div>
     </footer>
-
-    <!-- 
-    <footer class="container ">
-      <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-bottom">
-        <div class="col-md-4 d-flex align-items-center">
-          <span class="text-muted">&copy; 2023, Todos los derechos reservados.</span>
-        </div> 
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex"></ul>
-          <i class="ms-3 text-muted bi fa-brands fa-facebook"></i>
-          <i class="ms-3 text-muted bi fa-brands fa-twitter"></i>
-          <i class="ms-3 text-muted bi fa-brands fa-linkedin-in"></i>
-          <i class="ms-3 text-muted bi fa-brands fa-whatsapp"></i>
-        </ul>      
-      </div>
-    </footer>
- -->
+    
     <!-- Bootstrap - js - Separate -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
