--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -81,21 +81,23 @@
             </p>
           </section>
         </section>
-      </article>
-      <div class="redes">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-linkedin-in"></i>
-        <i class="fa-brands fa-whatsapp"></i>
-      </div>
+      </article>      
     </main>
 
-    <footer class="container-fluid h-auto d-inline-block">
-      <div class="row">
-        <div class="text-center col-sm-12">
-          <p>
-            <strong> Todos los derechos reservados por copyright </strong>
+    <footer class="container-fluid h-auto">
+      <div class="row align-items-center mt-3">
+        <div class="txt col-md-6 col-lg-6 ps-4">
+          <p class="">
+            <span class="text-muted">&copy; 2023, Todos los derechos reservados.</span>
           </p>
+        </div>
+        <div class="redes align-self-center col-sm-12 col-md-6 col-lg-6 pe-4">
+          <ul class="">
+            <i class="fa-brands fa-facebook p-2"></i>
+            <i class="fa-brands fa-twitter p-2"></i>
+            <i class="fa-brands fa-linkedin-in p-2"></i>
+            <i class="fa-brands fa-whatsapp p-2"></i>
+          </ul>
         </div>
       </div>
     </footer>
