--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,21 +60,43 @@
     <!-- Navbar Fin -->
 
     <main>
-      <section class="contacto">
-        <h1>Contacto</h1>
-        <form action="#" method="post">
-          <label for="name">Nombre:</label>
-          <input type="text" id="name" name="name" required />
-
-          <label for="email">Correo electrónico:</label>
-          <input type="email" id="email" name="email" required />
-
-          <label for="message">Mensaje:</label>
-          <textarea id="message" name="message" rows="4" required></textarea>
-
-          <button type="submit">Enviar</button>
-        </form>
-      </section>      
+        <div class="contacto container w-90 mt-3 mb-5 p-5">
+          <div class="row align-items-center text-center">
+            <div class="col-sm-12 col-md-12 col-lg-3">
+              <h1 class="align-middle">Contacto</h1>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-9">
+              <form action="#" class="p-5 rounded">
+                <div class="row">
+                  <div class="col-md-6 col-sm-12 p-2">
+                    <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre" required/>
+                  </div>
+                  <div class="col-md-6 col-sm-12 p-2">
+                    <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Apellido" required/>
+                  </div>                                    
+                </div> 
+                <div class="row">
+                  <div class="col-sm-12 col-md-12 p-2">
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Email" required/>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6 col-sm-12 p-2">
+                    <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Direccion" required/>
+                  </div>
+                  <div class="col-md-6 col-sm-12 p-2">
+                    <input type="number" class="form-control" id="telefono" name="telefono" placeholder="Telefono" required/>
+                  </div>                                    
+                </div>   
+                <div class="row">
+                  <div class="col-sm-12 col-md-12 p-2">
+                    <textarea class="form-control" id="message" name="message" placeholder="Mensaje" required></textarea>
+                  </div>
+                </div>             
+              </form>
+            </div>
+          </div>
+        </div>    
     </main>
 
     <footer class="container-fluid h-auto">
