V11-Responsive design Nosotros

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -92,6 +92,9 @@
                   <div class="col-sm-12 col-md-12 p-2">
                     <textarea class="form-control" id="message" name="message" placeholder="Mensaje" required></textarea>
                   </div>
+                </div>
+                <div class="d-grid p-2">
+                  <button type="submit" class="">Enviar</button>
                 </div>             
               </form>
             </div>
