--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -58,30 +58,34 @@
       </div>
     </nav>
     <!-- Navbar Fin -->
-    <main>
-      <article class="conocer">
-        <h1>Nosotros</h1>
-        <section class="nosotros">
-          <section class="mision">
-            <h2>Misión</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga,
-              repellat reiciendis placeat laborum quia quaerat alias veniam.
-              Blanditiis minima omnis quos atque vitae exercitationem animi
-              fugit debitis sint, inventore magnam!
-            </p>
+    <main class="container">
+      <h1 class="text-center m-5">Nosotros</h1>
+      <div class="row conocer">        
+        <section class="row nosotros mb-5">
+          <section class="col-md-6 col-sm-12 ">
+            <div class="mision rounded mb-5  p-4">
+              <h2>Misión</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga,
+                repellat reiciendis placeat laborum quia quaerat alias veniam.
+                Blanditiis minima omnis quos atque vitae exercitationem animi
+                fugit debitis sint, inventore magnam!
+              </p>
+            </div>
           </section>
-          <section class="vision">
-            <h2>Visión</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-              adipisci aliquam laudantium facilis? Eveniet, facere dicta!
-              Reprehenderit illo omnis unde, sint animi dolorem repellendus
-              dolorum odit, totam officia consectetur nemo!
-            </p>
+          <section class="col-md-6 col-sm-12">
+            <div class="vision rounded mb-5 p-4">
+              <h2>Visión</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga,
+                repellat reiciendis placeat laborum quia quaerat alias veniam.
+                Blanditiis minima omnis quos atque vitae exercitationem animi
+                fugit debitis sint, inventore magnam!
+              </p>
+            </div>
           </section>
         </section>
-      </article>      
+      </div>      
     </main>
 
     <footer class="container-fluid h-auto">
