V12-SEO description y keywords

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Bienvenido a Soluciones Digitales, tu socio confiable en soluciones digitales, software avanzado y equipos de cómputo de alta calidad. Mejora la eficiencia de tu negocio con nuestras soluciones tecnológicas personalizadas.">
+    <meta name="keywords" content="soluciones digitales, software, equipos de cómputo, tecnología, redes, servicios tecnológicos">
+    <meta name="author" content="Marlon M Manrique M">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />   
+        
     <!-- font-awesome -->
     <link
       rel="stylesheet"
