--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -2,6 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="¿Tienes alguna pregunta o necesitas asesoramiento tecnológico? Contacta a Soluciones Digitales hoy mismo. Estamos aquí para ayudarte. Encuentra nuestros datos de contacto y formulario de consulta aquí.">
+    <meta name="keywords" content="información de contacto, consulta tecnológica, soporte técnico, comunicación empresarial">
+    <meta name="author" content="Marlon M Manrique M">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- font-awesome -->
     <link
