--- a/pages/login.html
+++ b/pages/login.html
@@ -2,6 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Inicia sesión en tu cuenta de Soluciones Digitales para acceder a tus servicios y recursos personalizados. Si has olvidado tu contraseña, te ayudaremos a recuperarla. Accede a tu cuenta ahora.">
+    <meta name="keywords" content="inicio de sesión, acceso a la cuenta, gestión de la cuenta, contraseña olvidada">
+    <meta name="author" content="Marlon M Manrique M">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- font-awesome -->
     <link
