--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -2,6 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Conoce a Soluciones Digitales: un equipo apasionado de expertos en tecnología. Nuestra historia, valores y experiencia en sistemas y redes respaldan nuestra dedicación para brindarte soluciones digitales de calidad.">
+    <meta name="keywords" content=" empresa de tecnología, expertos en sistemas, servicios de redes, experiencia en tecnología">
+    <meta name="author" content="Marlon M Manrique M">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- font-awesome -->
     <link
