--- a/pages/productos.html
+++ b/pages/productos.html
@@ -2,6 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Explora nuestra amplia gama de productos y servicios tecnológicos en Soluciones Digitales. Desde software innovador hasta equipos de cómputo de vanguardia, aquí encontrarás todo lo que necesitas para impulsar tu negocio.">
+    <meta name="keywords" content="productos tecnológicos, software de vanguardia, equipos de cómputo de calidad, soluciones digitales personalizadas">
+    <meta name="author" content="Marlon M Manrique M">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- font-awesome -->
     <link
