V13-SEO aminacion inicio-productos

--- a/index.html
+++ b/index.html
@@ -97,19 +97,19 @@
             <h2><strong>Encuentra</strong></h2>
             <div class="row">
               <div class="col-md-6 col-lg-3 text-center">
-                <img src="img/equipos.png" alt="" />
+                <img class="imgA" src="img/equipos.png" alt="" />
                 <h4 class="w-auto">Equipos</h4>
               </div>
               <div class="col-md-6 col-lg-3 text-center">
-                <img src="img/sofware.png" alt="" />
+                <img class="imgB" src="img/sofware.png" alt="" />
                 <h4>Software</h4>
               </div>
               <div class="col-md-6 col-lg-3 text-center">
-                <img src="img/mantenimiento.png" alt="" />
+                <img class="imgA" src="img/mantenimiento.png" alt="" />
                 <h4>Mantenimiento</h4>
               </div>
               <div class="col-md-6 col-lg-3 text-center">
-                <img src="img/asesorias.png" alt="" />
+                <img class="imgB" src="img/asesorias.png" alt="" />
                 <h4>Asesorías</h4>
               </div>
             </div>            
