--- a/pages/productos.html
+++ b/pages/productos.html
@@ -65,75 +65,75 @@
       <h1 class="text-center"><strong>Productos</strong></h1>
       <section class="row">
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgC" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 1</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgD" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 2</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgC" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 3</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgD" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 4</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgC" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 5</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgD" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 6</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgC" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 7</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgD" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 8</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgC" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 9</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgD" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 10</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgC" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 11</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgD" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 12</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgC" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 13</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgD" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 14</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgC" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 15</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgD" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 16</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgC" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 17</h5>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-2 text-center">
-          <img src="../img/producto.jpg" alt="Producto" />
+          <img class="imgD" src="../img/producto.jpg" alt="Producto" />
           <h5>Producto - 18</h5>
         </div>
       </section>    
